WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56068
WebKit2: Can't uncheck 'Spelling and Grammar' contextual items
https://bugs.webkit.org/show_bug.cgi?id=56068
Summary
WebKit2: Can't uncheck 'Spelling and Grammar' contextual items
Adele Peterson
Reported
2011-03-09 18:15:41 PST
WebKit2: Can't uncheck 'Spelling and Grammar' contextual items
Attachments
patch
(2.42 KB, patch)
2011-03-09 18:17 PST
,
Adele Peterson
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adele Peterson
Comment 1
2011-03-09 18:17:22 PST
Created
attachment 85272
[details]
patch
Adele Peterson
Comment 2
2011-03-09 18:30:21 PST
Committed revision 80683.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug