Fix for https://bugs.webkit.org/show_bug.cgi?id=56068 <rdar://problem/9058245> WebKit2: Can't uncheck 'Spelling and Grammar' contextual items

Reviewed by Anders Carlsson.

* UIProcess/WebPageProxy.cpp: (WebKit::WebPageProxy::contextMenuItemSelected):
Add cases for ContextMenuItemTagCorrectSpellingAutomatically, ContextMenuItemTagCheckSpellingWhileTyping, 
and ContextMenuItemTagCheckGrammarWithSpelling



git-svn-id: svn://svn.chromium.org/blink/trunk@80683 bbb929c8-8fbe-4397-9dbb-9b2b20218538